--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "johnny-five": "^1.3.1",
     "osc-js": "^2.1.0",
     "socket.io": "^2.3.0"
   }
